# chess-0x539

./: .babelrc  .gitignore  App.css  App.js  Cargo.toml  README.md  chess-0x539.js  chess-0x539_bg.js  chess-0x539_bg.wasm  chess_0x539.d.ts  chess_0x539.js  chess_0x539_bg.js  chess_0x539_bg.wasm  chess_0x539_bg.wasm.d.ts  config-overrides.js  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
chess-core/: chess.js
components/: board.js  boardHolderExplorer.js  boardholder.js  eventModal.js  gameInfoModal.js  header.js  largebutton.js  leftSideBar.js  login.js  mergePieces.js  overlay.js  piece.js  pieceExplorer.js  rightSideBar.js  searchBar.js  side.js  sideBar.js  signup.js  timer.js
pages/: board_test.js  challenge.js  comming_soon.js  explorer.js  main.js
public/: index.html
routes/: index.js  route.js
src/: app_state.rs  components.rs  drawer.rs  gl_setup.rs  lib.rs  main.md  main.rs
src/chess_core/: board.rs  game.rs  mod.rs  perms.rs  piece.rs  piece_location.rs  square.rs  utils.rs
src/programs/: drawer_2d.rs  mod.rs
src/shaders/fragment/: draw_image.rs  drawer_2d.rs  mod.rs
src/shaders/vertex/: draw_image.rs  drawer_2d.rs
utils/: apiQueryStrapi.js  apiStrapi.js  index.js
